--- a/personal-budget/src/styles.scss
+++ b/personal-budget/src/styles.scss
@@ -347,3 +347,93 @@
   [hidden] {
     display: none;
   }
+
+
+
+
+
+
+
+
+
+
+  * {
+    box-sizing: border-box;
+}
+
+body {
+    font-size: 10px;
+    font-family: Tahoma, Arial;
+}
+
+
+div.hero {
+    height: 350px;
+    background-color: #b4c6f0;
+    background-image: url('/assets/bg.png');
+    background-size: 400px;
+    background-repeat: no-repeat;
+    background-position: center bottom;
+    padding-top: 40px;
+}
+
+div.hero h1,
+div.hero h2 {
+    text-align: center;
+    margin: 0;
+}
+
+div.hero h1 {
+    color: #fff;
+    font-size: 4.2em;
+    margin-bottom: 20px;
+}
+
+div.hero h2 {
+    color: #4d5791;
+}
+
+main {
+    padding: 40px;
+    width: 100%;
+}
+
+.page-area {
+    max-width: 768px;
+    display: inline-block;
+}
+
+footer {
+    height: 50px;
+    background-color: #b4c6f0;
+    padding: 40px;
+}
+
+.skip {
+    display: block;
+    line-height: 44px;
+    padding: 0 20px;
+    margin-top: -44px;
+}
+
+.skip:focus {
+    margin-top: 0;
+}
+
+.center {
+    text-align: center;
+}
+
+main article {
+    display: inline-block;
+    width: 100%;
+    max-width: 340px;
+    text-align: justify;
+    margin: 20px;
+}
+
+@media screen and (min-width: 768px) {
+    main article {
+        margin: 10px;
+    }
+}
